test/fails/bad_generics/infer12.lgl
`v multiop<`t, `u, `v>(`t x, `u y, `v z) {
    return x * y * z
}

void main() {
    print multiop(1., [1., 2.], 2.);  // No viable return type
}